Add Texture class and SDL_image support for textures
This commit introduces a new `Texture` class in `Texture.cpp` and `Texture.h`, enhancing the SDL framework's image handling capabilities. The class provides methods for loading images as textures, retrieving their sizes, and ensuring proper resource management.

Additionally, the `Renderer` class is updated with a new `DrawTexture` method, allowing for rendering textures to the screen. The project configuration is updated to include the new files and dependencies, specifically `sdl3_image.lib`, which is necessary for image texture handling.

The `EngineInc.h` file is modified to include the new `Texture.h` header, making the `Texture` class available throughout the engine. Furthermore, the `Main.cpp` file demonstrates the usage of the `Texture` class by loading an image and rendering it in the main game loop.

Overall, these changes significantly improve the project's ability to work with various image formats and textures, streamlining the rendering process in SDL.

--- a/Source/Engine/Engine.vcxproj.filters
+++ b/Source/Engine/Engine.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClCompile Include="Renderer\ParticleSystem.cpp">
       <Filter>Source\Renderer</Filter>
     </ClCompile>
+    <ClCompile Include="Renderer\Texture.cpp">
+      <Filter>Source\Renderer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\Random.h">
@@ -131,6 +134,9 @@
       <Filter>Source\Core</Filter>
     </ClInclude>
     <ClInclude Include="Renderer\ParticleSystem.h">
+      <Filter>Source\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer\Texture.h">
       <Filter>Source\Renderer</Filter>
     </ClInclude>
   </ItemGroup>
