Add Logger class and refactor error handling
Introduced a new `Logger` class for structured logging with severity levels (Info, Warning, Error, Debug). Replaced `std::cerr` error messages in multiple source files with `Logger` calls to improve logging consistency.

Modified the `Particle` struct to initialize member variables with defaults. Transitioned from using `Model` to `Texture` in rendering-related code, particularly in `Enemy` and `Player` updates, and adjusted relevant methods in `SpaceGame`. Updated project files to include the new `Logger.h` header.

--- a/Source/Engine/Engine.vcxproj.filters
+++ b/Source/Engine/Engine.vcxproj.filters
@@ -151,6 +151,9 @@
     <ClInclude Include="Core\Singleton.h">
       <Filter>Source\Core</Filter>
     </ClInclude>
+    <ClInclude Include="Core\Logger.h">
+      <Filter>Source\Core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Engine.rc" />
