Enhance audio system and improve collision handling
- Updated `AudioSystem` to use `AudioClip` for sound management.
- Introduced `PlaySound` and `CheckFMODResult` methods.
- Modified `SpriteRenderer` to validate textures before drawing.
- Added `nullTexture` to `SpriteRenderer` and made `textureName` public.
- Updated project files to include new components: `AudioClip`, `RigidBody`, and `CircleCollider2D`.
- Improved lifespan checks and component retrieval in `Actor`.
- Implemented collision detection in `Scene` using `ColliderComponent`.
- Changed texture handling in `Renderer` to use references.
- Updated game entities (`Enemy`, `Player`, `Rocket`) to utilize new physics components.
- Replaced direct sound playback in `SpaceGame` with `PlaySound`.
- Introduced `CircleCollider2D` and `RigidBody` classes for enhanced physics.
- Added `AudioClip` class for audio clip management.
- Created `ColliderComponent` as a base class for collision detection.

--- a/Source/Engine/Engine.vcxproj
+++ b/Source/Engine/Engine.vcxproj
@@ -187,7 +187,10 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Audio\AudioClip.cpp" />
     <ClCompile Include="Audio\AudioSystem.cpp" />
+    <ClCompile Include="Components\CircleCollider2D.cpp" />
+    <ClCompile Include="Components\RigidBody.cpp" />
     <ClCompile Include="Components\SpriteRenderer.cpp" />
     <ClCompile Include="Core\File.cpp" />
     <ClCompile Include="Core\Time.cpp" />
@@ -210,8 +213,12 @@
     <ClCompile Include="Renderer\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Audio\AudioClip.h" />
     <ClInclude Include="Audio\AudioSystem.h" />
+    <ClInclude Include="Components\CircleCollider2D.h" />
+    <ClInclude Include="Components\ColliderComponent.h" />
     <ClInclude Include="Components\RendererComponent.h" />
+    <ClInclude Include="Components\RigidBody.h" />
     <ClInclude Include="Components\SpriteRenderer.h" />
     <ClInclude Include="Core\File.h" />
     <ClInclude Include="Core\Logger.h" />
@@ -240,9 +247,6 @@
     <ClInclude Include="Renderer\Texture.h" />
     <ClInclude Include="Resources\Resource.h" />
     <ClInclude Include="Resources\ResourceManager.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="Engine.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
