Refactor rendering system to use Mesh class
Updated Engine to support fullscreen mode and resource clearing. Replaced Model class with Mesh class, including new Mesh files. Enhanced Vector2 and Vector3 with stream operators. Improved audio resource handling in SpaceGame. Added post-build event for output directory in project files. Updated project references and logging for better debugging.

--- a/Source/Engine/Engine.vcxproj.filters
+++ b/Source/Engine/Engine.vcxproj.filters
@@ -41,7 +41,7 @@
     <ClCompile Include="Input\InputSystem.cpp">
       <Filter>Source\Input</Filter>
     </ClCompile>
-    <ClCompile Include="Renderer\Model.cpp">
+    <ClCompile Include="Renderer\Mesh.cpp">
       <Filter>Source\Renderer</Filter>
     </ClCompile>
     <ClCompile Include="Renderer\Renderer.cpp">
@@ -118,7 +118,7 @@
     <ClInclude Include="Math\Vector3.h">
       <Filter>Source\Math</Filter>
     </ClInclude>
-    <ClInclude Include="Renderer\Model.h">
+    <ClInclude Include="Renderer\Mesh.h">
       <Filter>Source\Renderer</Filter>
     </ClInclude>
     <ClInclude Include="Math\Transform.h">
