--- a/Source/GameClean/GameClean.vcxproj.filters
+++ b/Source/GameClean/GameClean.vcxproj.filters
@@ -64,4 +64,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Build\Assets\scene.json">
+      <Filter>Assets</Filter>
+    </None>
+  </ItemGroup>
 </Project>
