Refactor rendering and event management systems
- Updated `MeshRenderer` and `SpriteRenderer` to initialize resources in the `Start` method for better resource management.
- Refactored `Factory::Create` method for improved type safety and ownership handling.
- Introduced new `Event`, `EventManager`, and `Observer` classes to implement an event system for component communication.
- Added `Collidable` class for collision detection, with updates to `Enemy`, `Player`, and `Rocket` classes to inherit from it.
- Enhanced `Actor` class with `Start` and `Destroy` methods for better lifecycle management.
- Updated `Scene` and `SpaceGame` classes to manage actor lifecycles and scene loading more effectively.
- Modified various `Update` methods to align with the new structure and ensure proper initialization and collision handling.

--- a/Source/Engine/Engine.vcxproj.filters
+++ b/Source/Engine/Engine.vcxproj.filters
@@ -33,6 +33,12 @@
     <Filter Include="Source\Components">
       <UniqueIdentifier>{fbf9795d-0016-4a46-823d-0db2d2c3afb9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source\Physics">
+      <UniqueIdentifier>{da1447fe-635e-4add-b6d1-84d7e8ae27b7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Event">
+      <UniqueIdentifier>{b81642ee-ae9c-455f-8df5-22d10c465ed7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp">
@@ -106,6 +112,9 @@
     </ClCompile>
     <ClCompile Include="Framework\Object.cpp">
       <Filter>Source\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="Event\EventManager.cpp">
+      <Filter>Source\Event</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -225,6 +234,18 @@
     </ClInclude>
     <ClInclude Include="Core\Serializable.h">
       <Filter>Source\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Physics\Collidable.h">
+      <Filter>Source\Physics</Filter>
+    </ClInclude>
+    <ClInclude Include="Event\Observer.h">
+      <Filter>Source\Event</Filter>
+    </ClInclude>
+    <ClInclude Include="Event\Event.h">
+      <Filter>Source\Event</Filter>
+    </ClInclude>
+    <ClInclude Include="Event\EventManager.h">
+      <Filter>Source\Event</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
