Add bat enemy and enhance texture handling
- Updated `prototypes.json` to include a new enemy "bat" with properties and components.
- Improved texture handling in `SpriteRenderer` to support `textureRect`.
- Added new `DrawTexture` method in `Renderer` for better texture rendering control.
- Included new source files for `Animator` and `TextureAnimation` in project files.
- Corrected actor and prototype reading order in `Scene.cpp`.
- Introduced `Rect.h` for managing rectangle structures in texture animations.
- Updated `GameClean` project files to include new assets for the bat enemy.
- Added animation system with new files for `Animator` and `TextureAnimation`.

--- a/Source/GameClean/GameClean.vcxproj
+++ b/Source/GameClean/GameClean.vcxproj
@@ -222,6 +222,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\Build\Assets\Platformer\Animations\bat_idle.json" />
     <None Include="..\..\Build\Assets\Platformer\Scenes\level.json" />
     <None Include="..\..\Build\Assets\Platformer\Scenes\prototypes.json" />
     <None Include="..\..\Build\Assets\scene.json" />
