Tileset (9/4/25) & Preparing for Final

--- a/Source/Engine/Engine.vcxproj.filters
+++ b/Source/Engine/Engine.vcxproj.filters
@@ -131,6 +131,12 @@
     <ClCompile Include="Components\Animator.cpp">
       <Filter>Source\Components</Filter>
     </ClCompile>
+    <ClCompile Include="Renderer\Tilemap.cpp">
+      <Filter>Source\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="Components\TilemapRenderer.cpp">
+      <Filter>Source\Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\Random.h">
@@ -275,6 +281,12 @@
       <Filter>Source\Renderer</Filter>
     </ClInclude>
     <ClInclude Include="Components\Animator.h">
+      <Filter>Source\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer\Tilemap.h">
+      <Filter>Source\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="Components\TilemapRenderer.h">
       <Filter>Source\Components</Filter>
     </ClInclude>
   </ItemGroup>
