--- a/Source/GameClean/GameClean.vcxproj
+++ b/Source/GameClean/GameClean.vcxproj
@@ -225,6 +225,7 @@
     <None Include="..\..\Build\Assets\Platformer\Animations\bat_idle.json" />
     <None Include="..\..\Build\Assets\Platformer\Scenes\level.json" />
     <None Include="..\..\Build\Assets\Platformer\Scenes\prototypes.json" />
+    <None Include="..\..\Build\Assets\Platformer\Tilemaps\tilemap.json" />
     <None Include="..\..\Build\Assets\scene.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
